samples/_failures_safe/1761140430_776f0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9eceee8d.c: In function ‘main’:
./samples/SAFE/__tmp_9eceee8d.c:152:5: error: expected expression at end of input
  152 |     add_edge(&g, 4,
      |     ^~~~~~~~
./samples/SAFE/__tmp_9eceee8d.c:152:5: error: expected declaration or statement at end of input
